--- a/src/components/GeniePicker/genie-picker.css
+++ b/src/components/GeniePicker/genie-picker.css
@@ -14,7 +14,7 @@
 }
 
 .genie-picker {
-  width: min(500px, calc(100vw - 24px));
+  width: min(540px, calc(100vw - 24px));
   max-height: 60vh;
   display: flex;
   flex-direction: column;
@@ -196,7 +196,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  padding: 4px 0;
+  padding: 6px 0;
   font-size: 14px;
   font-family: var(--font-sans);
   line-height: normal;
